[package]
name = "boj-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3.2", features = ["derive"] }
reqwest = { version = "0.11" }
scraper = "0.13.0"
tokio = { version = "1", features = ["full"]}
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
